--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@trpc/server": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lightningcss": "^1.30.2",
     "lucide-react": "^0.554.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
